tests/expectations/compiler/function/transition_calls_async_function_fail.out
DCE_ENABLED:
Error [ETYC0372110]: A `transition` cannot return a future.
    --> compiler-test:4:35
     |
   4 |   transition f(a: u64, b: u64) -> Future {
     |                                   ^^^^^^
     |
     = Use an `async transition` instead.
Error [ETYC0372111]: The async function `finish` does not exist.
    --> compiler-test:5:12
     |
   5 |     return finish(a, b);
     |            ^^^^^^^^^^^^
     |
     = Ensure that `finish` is defined as an async function in the current program.
Error [ETYC0372088]: An async transition must call an async function.
    --> compiler-test:8:3
     |
   8 |   async transition finish(a: u64, b: u64) {
   9 |     if (b == 0u64) {
  10 |       assert_eq(b, 0u64);
  11 |     } else {
  12 |       assert_eq(a / b, 1u64);
  13 |     }
  14 |   }
     |   ^
     |
     = Example: `async transition foo() -> Future { let a: Future = bar(); return await_futures(a); }`

DCE_DISABLED:
Error [ETYC0372110]: A `transition` cannot return a future.
    --> compiler-test:4:35
     |
   4 |   transition f(a: u64, b: u64) -> Future {
     |                                   ^^^^^^
     |
     = Use an `async transition` instead.
Error [ETYC0372111]: The async function `finish` does not exist.
    --> compiler-test:5:12
     |
   5 |     return finish(a, b);
     |            ^^^^^^^^^^^^
     |
     = Ensure that `finish` is defined as an async function in the current program.
Error [ETYC0372088]: An async transition must call an async function.
    --> compiler-test:8:3
     |
   8 |   async transition finish(a: u64, b: u64) {
   9 |     if (b == 0u64) {
  10 |       assert_eq(b, 0u64);
  11 |     } else {
  12 |       assert_eq(a / b, 1u64);
  13 |     }
  14 |   }
     |   ^
     |
     = Example: `async transition foo() -> Future { let a: Future = bar(); return await_futures(a); }`
